Changelog
=========


2.6.1 (unreleased)
------------------

- Disalbe searchableText check in p.a.search filter_query.
  Issue #1700 Plone Version auf 4.2.1 heben.
  https://extranet.4teamwork.ch/extern/opengever-kanton-zug/sprint-backlog/1700
  [phgross]


2.6 (2012-11-28)
----------------

- Added some ajustments on the history viewlet:
   - Activate download confirmation for file download.
   - Added icons for the different history actions.
   - Maded version download view customizable.

  [phgross]

- Added small fix in customized search template.
  [phgross]

- Removed old and no longer used monkey patch for the plone.formwidget.contenttree.
  [phgross]

- Added adjustments for the new ftw.contentmenu version.
  Issue #799 Performance Optimierung ftw.contentmenu
  https://extranet.4teamwork.ch/intranet/projekte/4teamwork-egov/tracker-4teamwork-egov/799/
  [phgross]

- Added Gever specific formsubmithelper, which disallow a second submit.
  Issue #1680 doppeltes akzeptieren von Aufgaben moeglich
  https://extranet.4teamwork.ch/extern/opengever-kanton-zug/sprint-backlog/1680/
  [phgross]

- Dropped Plone 4.1 compatibility. Only 4.2 and up are supported.
  [lgraf]

- Integrate plone.app.search (including some gever customisations).
  [phgross]

- Cleaned up the html structure in the version table.
  Issue #1692 Versionen Viewlet Styling und Tabellenaufbau anpassen.
  https://extranet.4teamwork.ch/extern/opengever-kanton-zug/sprint-backlog/1692/
  [phgross]


2.5.4 (2012-10-26)
------------------

- Added QueryModificatorAdapter which allows customizing the RepositoryPathSourceBinder.
  [phgross]

- Adjust javscripts: Use $ instead of deprecated jq.
  [phgross]

- Fixed fallback in is_user_assigned_to_client.
  [phgross]


2.5.3 (2012-09-12)
------------------

- Update the french translation.
  [phgross]

- Adjust Msg2MimeTransform, start perl script as directly with perl,
  to avoid permission problems on the msg2mime.pl.
  [phgross]


2.5.1 (2012-06-22)